[gd_scene load_steps=14 format=2]

[ext_resource path="res://Assets/OldWizard.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Assets/EventBG.png" type="Texture" id=2]
[ext_resource path="res://UIEvent.gd" type="Script" id=3]
[ext_resource path="res://Assets/borderbox.png" type="Texture" id=4]
[ext_resource path="res://PauseMenu.tscn" type="PackedScene" id=5]

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )

[sub_resource type="DynamicFont" id=6]
size = 70
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="StyleBoxEmpty" id=9]

[sub_resource type="DynamicFont" id=11]
size = 70
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )

[sub_resource type="DynamicFontData" id=10]
font_path = "res://Assets/BetterPixels.ttf"

[sub_resource type="DynamicFont" id=3]
size = 70
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = SubResource( 10 )

[node name="UIEvent" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( -399, 122 )
mouse_filter = 1
script = ExtResource( 3 )

[node name="EventBG" type="Sprite" parent="."]
position = Vector2( 960, 540 )
texture = ExtResource( 2 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 696.0
rect_pivot_offset = Vector2( 1079, 17 )
custom_constants/separation = 70

[node name="InputWindow" type="MarginContainer" parent="HBoxContainer"]
margin_right = 656.0
margin_bottom = 384.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.55
custom_constants/margin_right = 9
custom_constants/margin_left = 25
custom_constants/margin_bottom = 20

[node name="Panel" type="Panel" parent="HBoxContainer/InputWindow"]
modulate = Color( 1, 1, 1, 0.588235 )
margin_left = 25.0
margin_right = 647.0
margin_bottom = 364.0
custom_styles/panel = SubResource( 5 )

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/InputWindow"]
margin_left = 25.0
margin_right = 647.0
margin_bottom = 364.0
custom_constants/separation = 50
alignment = 1

[node name="Choice1" type="Button" parent="HBoxContainer/InputWindow/VBoxContainer"]
margin_top = 86.0
margin_right = 622.0
margin_bottom = 157.0
rect_min_size = Vector2( 0, 70 )
custom_colors/font_color_hover = Color( 0.662745, 0.027451, 0.666667, 1 )
custom_fonts/font = SubResource( 6 )
custom_styles/hover = SubResource( 7 )
custom_styles/pressed = SubResource( 7 )
custom_styles/focus = SubResource( 7 )
custom_styles/disabled = SubResource( 7 )
custom_styles/normal = SubResource( 7 )
text = "Test"
clip_text = true

[node name="Choice2" type="Button" parent="HBoxContainer/InputWindow/VBoxContainer"]
margin_top = 207.0
margin_right = 622.0
margin_bottom = 278.0
rect_min_size = Vector2( 0, 70 )
custom_colors/font_color_hover = Color( 0.662745, 0.027451, 0.666667, 1 )
custom_fonts/font = SubResource( 6 )
custom_styles/hover = SubResource( 9 )
custom_styles/pressed = SubResource( 9 )
custom_styles/focus = SubResource( 9 )
custom_styles/disabled = SubResource( 9 )
custom_styles/normal = SubResource( 9 )
text = "Test"

[node name="ChoiceMade" type="Label" parent="HBoxContainer/InputWindow"]
visible = false
margin_left = 25.0
margin_top = 109.0
margin_right = 647.0
margin_bottom = 254.0
custom_fonts/font = SubResource( 11 )
text = "You made
your choice."
align = 1

[node name="TextWindow" type="MarginContainer" parent="HBoxContainer"]
margin_left = 726.0
margin_right = 1920.0
margin_bottom = 384.0
size_flags_horizontal = 3
custom_constants/margin_right = 32
custom_constants/margin_left = -9
custom_constants/margin_bottom = 20

[node name="Panel" type="Panel" parent="HBoxContainer/TextWindow"]
modulate = Color( 1, 1, 1, 0.588235 )
margin_left = -9.0
margin_right = 1162.0
margin_bottom = 364.0
custom_styles/panel = SubResource( 4 )

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/TextWindow"]
margin_left = -9.0
margin_right = 1162.0
margin_bottom = 364.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/TextWindow/MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 1151.0
margin_bottom = 344.0
rect_pivot_offset = Vector2( -177, -627 )

[node name="LineStart" type="Label" parent="HBoxContainer/TextWindow/MarginContainer/HBoxContainer"]
margin_right = 35.0
margin_bottom = 56.0
rect_min_size = Vector2( 16, 0 )
size_flags_vertical = 0
custom_fonts/font = SubResource( 3 )
text = "#"

[node name="Label" type="Label" parent="HBoxContainer/TextWindow/MarginContainer/HBoxContainer"]
margin_left = 39.0
margin_right = 1092.0
margin_bottom = 324.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 3 )
text = "Text here"
autowrap = true
clip_text = true

[node name="LineEnd" type="Label" parent="HBoxContainer/TextWindow/MarginContainer/HBoxContainer"]
margin_left = 1096.0
margin_top = 268.0
margin_right = 1131.0
margin_bottom = 324.0
rect_pivot_offset = Vector2( 628, -90 )
size_flags_vertical = 8
custom_fonts/font = SubResource( 3 )
text = "#"

[node name="Border" type="Sprite" parent="."]
position = Vector2( 960, 540 )
texture = ExtResource( 4 )

[node name="PauseMenu" parent="." instance=ExtResource( 5 )]
visible = false

[node name="Tween" type="Tween" parent="."]

[connection signal="pressed" from="HBoxContainer/InputWindow/VBoxContainer/Choice1" to="." method="_on_Choice1_pressed"]
[connection signal="pressed" from="HBoxContainer/InputWindow/VBoxContainer/Choice2" to="." method="_on_Choice2_pressed"]
[connection signal="tween_all_completed" from="Tween" to="." method="_on_Tween_tween_all_completed"]
